--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,26 @@
 beautifulsoup4==4.9.3
+certifi==2022.12.7
+chardet==4.0.0
+click==8.1.3
 Flask==2.0.2
 Flask-Cors==3.0.10
-googlesearch_python==1.0.1
+googlesearch-python==1.0.1
+gunicorn==20.1.0
+idna==2.10
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
+MarkupSafe==2.1.2
 numpy==1.21.4
 pandas==1.3.4
-python_dateutil==2.8.2
+python-dateutil==2.8.2
+pytz==2023.3
 requests==2.25.1
-scikit_learn==1.0.1
+scikit-learn==1.0.1
+scipy==1.10.1
+six==1.16.0
+soupsieve==2.4
+threadpoolctl==3.1.0
+urllib3==1.26.15
+Werkzeug==2.2.3
 whois==0.9.13
-gunicorn==20.1.0
